# TinyTim

./: .gitignore  CMakeLists.txt  README.md
etc/TinyTim/: tinytim.conf
src/: logger.h  main.c  main.h  server.h
